--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
     --background-color-hover: rgba(0, 0, 0, 0.02);
     --hight-light-color: rgba(255, 255, 255, 0.2);
     --transition-icon: url(./assets/moonstars.svg);
+    --color-link-name: #223850;
+    --color-link-name-hover: #2238507c;
 }
 
 .light {
@@ -24,22 +26,24 @@
     --background-color-hover: rgba(0, 0, 0, 0.02);
     --hight-light-color: rgba(0, 0, 0, 0.1);
     --transition-icon: url(./assets/sun.svg);
+    --color-link-name: #B227FF;
+    --color-link-name-hover: #b327ff7e;
 }
 
 body {
     background: var(--bg-url) no-repeat top center/cover;
+    transition: 0.3s;
+    height: 100vh;
 }
 
 header {
-    width: 360px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 8px;
     padding: 24px;
-    margin: auto;
+    margin: 56px auto 0px;
 }
-
 
 #switch {
     position: relative;
@@ -47,44 +51,40 @@ header {
     margin: 4px auto;
 }
 
-
-
-#switch-button {
+#switch button {
     width: 32px;
     height: 32px;
     background: #FFFFFF var(--transition-icon) no-repeat center;
-    border: 0;
     border-radius: 50%;
     position: absolute;
     transform: translateY(-50%);
     top: 50%;
     left: 0;
-    
-    
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border: 0;
+    animation: slide-out 0.2s;
 }
 
-span {
+#switch button:hover {
+    cursor: pointer;
+    outline: 8px solid var(--hight-light-color);
+}
+
+#switch span {
     width: 64px;
     height: 24px;
     background-color: var(--background-color);
     border: 1px solid var(--border-color);
     border-radius: 9999px;
     display: block;
-    -webkit-backdrop-filter: blur(4px);
-
-
+    backdrop-filter: blur(4px);
 }
 
-.light #switch-button {
-    right: 0;
-    left: initial;
-
+.light #switch button {
+    animation: slide-in 0.2s forwards;
 }
-
 
 nav {
-    width: 360px;
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -93,18 +93,17 @@ nav {
 }
 
 .links {
-    width: 312px;
+    width: 50vw;
+    min-width: 312px;
+    max-width: 540px;
     height: 56px;
     font-size: 16px;
     background: var(--background-color) ;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border: 1px solid var(--border-color);
     border-radius: 8px;
     backdrop-filter: blur(4px);
     color: var(--text-color);
     transition: 0.3s;
-    
-
 }
 
 .links:hover {
@@ -115,14 +114,11 @@ nav {
 }
 
 #socials {
-    width: 360px;
-    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 24px;
 }
-
 
 #socials a {
     display: flex;
@@ -134,12 +130,10 @@ nav {
 }
 
 footer {
-    width: 360px;
     margin: 0 auto;
-    display: flex;
     justify-content: center;
+    display: flex;
     padding: 24px;
-
 }
 
 p {
@@ -154,8 +148,6 @@ p {
     width: 112px;
 }
 
-
-
 #socials a:hover {
     background-color: var(--hight-light-color);
     
@@ -163,9 +155,38 @@ p {
 
 .link-nome {
     text-decoration: none;
-    color:#223850
+    color: var(--color-link-name);
 }
 
 .link-nome:hover {
-    color: #2238507c;
+    color: var(--color-link-name-hover);
+}
+
+@media (min-width:700px) {
+    :root {
+        --bg-url: url(./assets/bg-desktop-dark.jpg)
+    }
+
+    .light {
+        --bg-url: url(./assets/bg-desktop-light.jpg)
+    }
+
+}
+
+@keyframes slide-in {
+    from {
+        left:0;
+    }
+    to {
+        left:50%;
+    }
+}
+
+@keyframes slide-out {
+    from {
+        left:50%;
+    }
+    to {
+        left:0;
+    }
 }
